<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_publisher</name>
  <version>0.0.0</version>
  <description>This package provides the current position and orientation of the robot in the map with PoseWithCovarianceStamped format.</description>
  
  <maintainer email="smoreno@robotnik.es">smoreno</maintainer>
  
  <license>BSD-3-Clause</license>
  <url type="website">http://wiki.ros.org/pose_publisher</url>
  <url type="repository">https://github.com/RobotnikAutomation/pose_publisher.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

