<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_publisher</name>
  <version>0.1.4</version>
  <description>This package provides the current position and orientation of the robot in the map with PoseWithCovarianceStamped format.</description>
  
  <author email="zhi.yan@ai.univ-paris8.fr">Zhi Yan</author>
  <maintainer email="smoreno@robotnik.es">smoreno</maintainer>
  <maintainer email="ggari@robotnik.es">Guillem Gari</maintainer>
  
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pose_publisher</url>
  <url type="repository">https://github.com/RobotnikAutomation/pose_publisher.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

